--- a/index.html
+++ b/index.html
@@ -276,20 +276,20 @@
       successMsg.style.display = "none";
       errorMsg.style.display = "none";
 
-     const data = {
-    to: form.to.value,
-    subject: form.subject.value,
-    content: form.content.value
+    const data = {
+    to: document.getElementById("to").value,
+    subject: document.getElementById("subject").value,
+    content: document.getElementById("content").value
 };
 
-try {
-    const response = await fetch("https://antz.app.n8n.cloud/webhook/Send-Email", {
+const response = await fetch(
+    "https://antz.app.n8n.cloud/webhook/Send-Email", // Use Production URL here
+    {
         method: "POST",
-        headers: {
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify(data) // Send as JSON string
-    });
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(data)
+    }
+);
 
         if (response.ok) {
           form.reset();
@@ -308,4 +308,5 @@ try {
 </body>
 
 </html>
+
 
